--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </nav>
     </header>
     <hr>
-    <main>
+    <main class="main">
       <section id="about">
         <h2>Welcome on my portefolio</h2>
         <p>
