--- a/index.html
+++ b/index.html
@@ -7,27 +7,25 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
+    <header class="header">
+      <a class="logo" href="#">Thaedric</a>
       <nav class="navbar">
-        <a class="logo" href="#">Logo</a>
-        <div class="nav-links">
-          <ul>
-            <li class="active"><a href="#about">about me</a></li>
-            <li><a href="#project">project</a></li>
-            <li><a href="#skill">skills</a></li>
-          </ul>
-        </div>
-        <div id="theme-button">
-          <img class="button button-rounded" id="theme-logo" src="./img/moon.svg" />
-        </div>
-        <div class="menu-hamburger">
-          <span></span>
-        </div>
+        <a href="#about">about me</a>
+        <a href="#projects">project</a>
+        <a href="#skill">skills</a>
       </nav>
+      <div id="theme-button">
+        <img
+          class="button button-rounded"
+          id="theme-logo"
+          src="./img/moon.svg"
+        />
+      </div>
+      <div class="menu-hamburger">
+        <span></span>
+      </div>
     </header>
-    <hr>
-    <main class="main">
-      <section id="about">
+      <section id="about" class="about">
         <h2>Welcome on my portefolio</h2>
         <p>
           My name is Vaugeois Thomas a.k.a Thaedric. Here you'll learn more
@@ -39,9 +37,8 @@
         <p>Below you'll find a few projects, that I developped.</p>
       </section>
 
-      <section id="projets">
+      <section id="projects" class="projects">
         <h2>Projets</h2>
-        <div class="project">
           <h3>Lorem Ipsum</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, illum
@@ -95,7 +92,6 @@
           dolore cum necessitatibus officia, deserunt autem!
         </p>
       </section>
-    </main>
   </body>
   <script type="module" src="./js/app.js"></script>
 </html>
