Add : home section Fix : module.hamburger.js

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portefolio</title>
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -25,73 +29,34 @@
         <span></span>
       </div>
     </header>
-      <section id="about" class="about">
-        <h2>Welcome on my portefolio</h2>
+
+    <section id="home" class="home">
+      <div class="content">
+        <h2>Hi, I'm <span>Thaedric</span></h2>
+        <div class="text-animate">
+          <h3>Frontend Developer</h3>
+        </div>
         <p>
-          My name is Vaugeois Thomas a.k.a Thaedric. Here you'll learn more
-          about me and my passions.<br />
-          I began to develop since my 14 years old!<br />
-          I enjoyed to discover how a website works, then i decided to try
-          myself.
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores,
+          debitis saepe! Maxime, illum ipsum repudiandae velit iure adipisci
+          molestias commodi, delectus maiores consequatur laborum nobis itaque
+          minus est temporibus in sint dicta! Tenetur debitis reprehenderit
+          veniam porro praesentium voluptate aspernatur? Rerum, magnam!
+          Asperiores aliquam quia ullam dolorum reprehenderit exercitationem
+          modi.
         </p>
-        <p>Below you'll find a few projects, that I developped.</p>
-      </section>
-
-      <section id="projects" class="projects">
-        <h2>Projets</h2>
-          <h3>Lorem Ipsum</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, illum
-            officia dolorum quod, fugit sint nostrum eveniet corrupti distinctio
-            consequatur esse qui, sed tempore eius in nesciunt labore illo
-            quibusdam! Eaque, nam ut officiis soluta voluptas quas nesciunt
-            veritatis fugit ducimus praesentium porro! Reprehenderit quisquam,
-            culpa quas illo tempora fugiat ad, consequuntur aperiam sapiente
-            dolore cum necessitatibus officia, deserunt autem!
-          </p>
+        <div class="btn-group">
+          <a href="#" class="btn btn-rounded">Hire me</a>
+          <a href="#" class="btn btn-rounded">Let's talk</a>
         </div>
-        <div class="project">
-          <h3>Lorem Ipsum</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, illum
-            officia dolorum quod, fugit sint nostrum eveniet corrupti distinctio
-            consequatur esse qui, sed tempore eius in nesciunt labore illo
-            quibusdam! Eaque, nam ut officiis soluta voluptas quas nesciunt
-            veritatis fugit ducimus praesentium porro! Reprehenderit quisquam,
-            culpa quas illo tempora fugiat ad, consequuntur aperiam sapiente
-            dolore cum necessitatibus officia, deserunt autem!
-          </p>
+        <div class="home-social">
+          <a href="#"><i class="bx bxl-facebook"></i></a>
+          <a href="#"><i class="bx bxl-twitter"></i></a>
+          <a href="#"><i class="bx bxl-linkedin"></i></a>
         </div>
-        <div class="project">
-          <h3>Lorem Ipsum</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, illum
-            officia dolorum quod, fugit sint nostrum eveniet corrupti distinctio
-            consequatur esse qui, sed tempore eius in nesciunt labore illo
-            quibusdam! Eaque, nam ut officiis soluta voluptas quas nesciunt
-            veritatis fugit ducimus praesentium porro! Reprehenderit quisquam,
-            culpa quas illo tempora fugiat ad, consequuntur aperiam sapiente
-            dolore cum necessitatibus officia, deserunt autem!
-          </p>
-        </div>
-
-        <div class="other">
-          See more on <a href="#">Vercel</a> or <a href="#"> Github</a>
-        </div>
-      </section>
-
-      <section id="skill">
-        <h2>Skills</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, illum
-          officia dolorum quod, fugit sint nostrum eveniet corrupti distinctio
-          consequatur esse qui, sed tempore eius in nesciunt labore illo
-          quibusdam! Eaque, nam ut officiis soluta voluptas quas nesciunt
-          veritatis fugit ducimus praesentium porro! Reprehenderit quisquam,
-          culpa quas illo tempora fugiat ad, consequuntur aperiam sapiente
-          dolore cum necessitatibus officia, deserunt autem!
-        </p>
-      </section>
+        <div class="home-img"></div>
+      </div>
+    </section>
   </body>
   <script type="module" src="./js/app.js"></script>
 </html>
