add: About section

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
       <a class="logo" href="#">Thaedric</a>
       <nav class="navbar">
         <a href="#about">about me</a>
+        <a href="#resume">Resume</a>
         <a href="#projects">project</a>
         <a href="#skill">skills</a>
+        <a href="#contact">contact</a>
       </nav>
       <div id="theme-button">
         <img
@@ -31,8 +33,8 @@
     </header>
 
     <section id="home" class="home">
+      <h2 class="heading">Hi, I'm <span>Thaedric</span></h2>
       <div class="content">
-        <h2>Hi, I'm <span>Thaedric</span></h2>
         <div class="text-animate">
           <h3>Frontend Developer</h3>
         </div>
@@ -55,6 +57,122 @@
           <a href="#"><i class="bx bxl-linkedin"></i></a>
         </div>
         <div class="home-img"></div>
+      </div>
+    </section>
+
+    <section id="about" class="about">
+      <h2 class="heading">About <span>Me</span></h2>
+      <div class="about-img">
+        <img src="./img/profil.png" alt="" />
+      </div>
+      <div class="content">
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores,
+          debitis saepe! Maxime, illum ipsum repudiandae velit iure adipisci
+          molestias commodi, delectus maiores consequatur laborum nobis itaque
+          minus est temporibus in sint dicta! Tenetur debitis reprehenderit
+          veniam porro praesentium voluptate aspernatur? Rerum, magnam!
+          Asperiores aliquam quia ullam dolorum reprehenderit exercitationem
+          modi.
+        </p>
+        <div class="btn-alone">
+          <a href="#" class="btn btn-rounded">Read more ...</a>
+        </div>
+      </div>
+    </section>
+
+    <section id="resume" class="resume">
+      <h2 class="heading">My <span> Resume</span></h2>
+      <div class="resume-row">
+        <div class="resume-column">
+          <h3 class="title">Degree</h3>
+          <div class="resume-box">
+            <div class="resume-content">
+              <div class="content">
+                <div class="year">
+                  <i class="bx bxs-calendar"></i> 2017 - 2018
+                </div>
+                <h4>Master Degree - University</h4>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
+                  nisi, consequuntur atque facere adipisci eligendi deserunt
+                  accusamus tempora enim temporibus, ab pariatur?
+                </p>
+              </div>
+            </div>
+            <div class="resume-content">
+              <div class="content">
+                <div class="year">
+                  <i class="bx bxs-calendar"></i> 2018 - 2019
+                </div>
+                <h4>Master Degree - University</h4>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
+                  nisi, consequuntur atque facere adipisci eligendi deserunt
+                  accusamus tempora enim temporibus, ab pariatur?
+                </p>
+              </div>
+            </div>
+            <div class="resume-content">
+              <div class="content">
+                <div class="year">
+                  <i class="bx bxs-calendar"></i> 2019 - 20201
+                </div>
+                <h4>Master Degree - University</h4>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
+                  nisi, consequuntur atque facere adipisci eligendi deserunt
+                  accusamus tempora enim temporibus, ab pariatur?
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="resume-column">
+          <h3 class="title">Experiences</h3>
+          <div class="resume-box">
+            <div class="resume-content">
+              <div class="content">
+                <div class="year">
+                  <i class="bx bxs-calendar"></i> 2017 - 2018
+                </div>
+                <h4>Web Developer - Company</h4>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
+                  nisi, consequuntur atque facere adipisci eligendi deserunt
+                  accusamus tempora enim temporibus, ab pariatur?
+                </p>
+              </div>
+            </div>
+            <div class="resume-content">
+              <div class="content">
+                <div class="year">
+                  <i class="bx bxs-calendar"></i> 2017 - 2019
+                </div>
+                <h4>Web Developer - Company</h4>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
+                  nisi, consequuntur atque facere adipisci eligendi deserunt
+                  accusamus tempora enim temporibus, ab pariatur?
+                </p>
+              </div>
+            </div>
+            <div class="resume-content">
+              <div class="content">
+                <div class="year">
+                  <i class="bx bxs-calendar"></i> 2017 - 2018
+                </div>
+                <h4>Web Developer - Company</h4>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
+                  nisi, consequuntur atque facere adipisci eligendi deserunt
+                  accusamus tempora enim temporibus, ab pariatur?
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
   </body>
