Renaming: resume-content content by resume-content card

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <div class="about-img">
         <img src="./img/profil.png" alt="" />
       </div>
-      <div class="content">
+      <div class="card">
         <p>
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores,
           debitis saepe! Maxime, illum ipsum repudiandae velit iure adipisci
@@ -88,7 +88,7 @@
           <h3 class="title">Degree</h3>
           <div class="resume-box">
             <div class="resume-content">
-              <div class="content">
+              <div class="card">
                 <div class="year">
                   <i class="bx bxs-calendar"></i> 2017 - 2018
                 </div>
@@ -101,7 +101,7 @@
               </div>
             </div>
             <div class="resume-content">
-              <div class="content">
+              <div class="card">
                 <div class="year">
                   <i class="bx bxs-calendar"></i> 2018 - 2019
                 </div>
@@ -114,7 +114,7 @@
               </div>
             </div>
             <div class="resume-content">
-              <div class="content">
+              <div class="card">
                 <div class="year">
                   <i class="bx bxs-calendar"></i> 2019 - 20201
                 </div>
@@ -133,7 +133,7 @@
           <h3 class="title">Experiences</h3>
           <div class="resume-box">
             <div class="resume-content">
-              <div class="content">
+              <div class="card">
                 <div class="year">
                   <i class="bx bxs-calendar"></i> 2017 - 2018
                 </div>
@@ -146,7 +146,7 @@
               </div>
             </div>
             <div class="resume-content">
-              <div class="content">
+              <div class="card">
                 <div class="year">
                   <i class="bx bxs-calendar"></i> 2017 - 2019
                 </div>
@@ -159,7 +159,7 @@
               </div>
             </div>
             <div class="resume-content">
-              <div class="content">
+              <div class="card">
                 <div class="year">
                   <i class="bx bxs-calendar"></i> 2017 - 2018
                 </div>
