Adding: Start of responsive

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
       <a class="logo" href="#">Thaedric</a>
       <nav class="navbar">
         <a href="#about">about me</a>
-        <a href="#resume">Resume</a>
-        <a href="#projects">project</a>
+        <a href="#resume">resume</a>
+        <a href="#project">project</a>
         <a href="#skill">skills</a>
         <a href="#contact">contact</a>
       </nav>
-      <div id="theme-button">
+      <div class="theme-button">
         <img
           class="button button-rounded"
           id="theme-logo"
@@ -32,6 +32,7 @@
       </div>
     </header>
 
+    <!-- HOME SECTION -->
     <section id="home" class="home">
       <h2 class="heading">Hi, I'm <span>Thaedric</span></h2>
       <div class="content">
@@ -60,12 +61,13 @@
       </div>
     </section>
 
+    <!-- ABOUT SECTION -->
     <section id="about" class="about">
       <h2 class="heading">About <span>Me</span></h2>
       <div class="about-img">
         <img src="./img/profil.png" alt="" />
       </div>
-      <div class="card">
+      <div class="content">
         <p>
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores,
           debitis saepe! Maxime, illum ipsum repudiandae velit iure adipisci
@@ -81,6 +83,7 @@
       </div>
     </section>
 
+    <!-- RESUME SECTION -->
     <section id="resume" class="resume">
       <h2 class="heading">My <span> Resume</span></h2>
       <div class="resume-row">
@@ -174,6 +177,16 @@
           </div>
         </div>
       </div>
+    </section>
+
+    <!-- PROJECT SECTION -->
+    <section id="project" class="project">
+      <h3 class="heading">My <span>projects</span></h3>
+      <p>
+        Later, you'll find somes projects of mine.<br />
+        At this point, i've no project to show you ! <br />
+        I'm sorry for this inconvenience.
+      </p>
     </section>
   </body>
   <script type="module" src="./js/app.js"></script>
